style.css
#navlinks {
  display: flex;
  flex-direction: row;
  align-items: center;
  flex-grow: 1;
}

.backgroundImg {
  width: 100%;
  height: 100vh;
  right: 0px;
  position: absolute;
  top: 0;
  margin: 0;
  z-index: -1;

}

#rebadge {
  background-color: rgb(255, 245, 233);
  border-radius: 10px;
  font-weight: 300;
}

.main-content {
  position: relative;
  height: 100vh;
  margin: 0;
  margin-top: 100vh;
}

html,
body {
  margin: 0;
  padding: 0;
  font-family: "DM Sans", sans-serif;
}

#head-content {
  width: 100%;
  position: absolute;
  top: 0;
  text-align: center;
  color: black;
  justify-content: center;
  align-items: center;
  display: flex;
  flex-direction: row;
  height: 100vh;
  z-index: 5;
}

#headContent2 {}

.navBar {
  position: relative;
  background-color: rgb(33, 33, 33);
  height: 10vh;
  width: 100%;
  top: 0;
  color: white;
  display: flex;
  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 2px 2px 0 #000;
  display: flex;
  z-index: 50;
  align-items: center;
  justify-content: flex-start;
}

.navBar h4 {
  font-size: 20px;
}

#navlinks i {
  margin-left: auto;
  font-size: 25px;
  margin-right: 20px;
}

.product h1 {
  margin: 0;
  font-size: 30px;
  margin-top: 0px;
  margin-bottom: 5px;
}

.product h4 {
  margin: 0;
  margin-top: 2px;
  font-weight: 700;
  margin-bottom: 7px;
  font-size: 20px;
}

.cu {
  transition-duration: 2s;
}

.cu:hover {
  text-decoration: underline;
}

.product {
  border-radius: 25px;
  background-color: rgb(255, 252, 248);
  display: flex;
  margin-right: 20px;
  margin-bottom: 20px;
  padding: 2px;
  align-items: center;
  flex-direction: column;
}

#store .product {
  background-color: rgb(255, 241, 224);
}

#featured {
  background-color: rgb(255, 243, 227);
  height: auto;
}

#store {
  background-color: white;
  display: flex;
}

.pimg img {
  height: 330px;
  overflow: hidden;
  width: 330px;
  margin: 10px;
  border-radius: 25px;
  ;
  object-fit: cover;
  transition: all .3s ease;
}

#insta {
  transition-duration: 0.3s;
}

#insta:hover {
  background-color: rgb(171, 39, 201) !important;
}

#faceb {
  transition-duration: 0.3s;
}

#faceb:hover {
  background-color: #3b5998 !important;
}

#contact {
  background-color: rgb(255, 244, 208);
}

#about {
  background-color: rgb(247, 247, 247);
}

#dlvryinfo {
  background-color: rgb(255, 246, 226);
}

.pimg img:hover {
  transform: scale(1.02);
}

.primaryBtn {
  padding: 10px 25px 10px 25px;
  background-color: rgb(26, 26, 26);
  color: white;
  font-size: 19px;
  font-weight: 300;
  border: none;
  border-radius: 20px;
}

.review span {
  color: rgb(100, 152, 255)
}

.secondaryBtn {
  padding: 10px 17px 10px 17px;
  background-color: rgb(255, 255, 255);
  color: rgb(10, 10, 10);
  font-size: 21px;
  border: 1px solid black;
  font-weight: 300;
  border-radius: 20px;
}

#cmain .secondaryBtn {
  font-size: 15px;
}


#menu {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  margin-top: 10vh;
  height: 90vh;
  background-color: rgb(33, 33, 33);
  z-index: 90;
  display: none;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

#productDetails select {
  border: solid 1px black;
  background-color: #f4f4f4;
  width: 80%;
  font-size: 16px;
  padding: 5px 10px;
  border-radius: 3px;
  outline: none;
}

.options {
  display: flex;
  flex-direction: row;
  padding: 0;
  align-items: center;
  margin-bottom: 5px;
  margin-top: 5px;
}

.checkbox {
  outline: none;
  margin: 0;
  width: 15px;
  height: 15px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-right: 7px;
  transition-duration: 0.3s;
  border: solid 1px black;
  border-radius: 5px;
}

.checkbox i {
  color: white;
}

.unchecked i {
  display: none !important;
}

.checked {
  background-color: #3f5ea1;
}

.checkbox {
  font-size: 10px;
}

.options p {
  margin: 0;
  font-size: 18px;
}

#returnStore {
  transition-duration: 0.3s;
  color: rgb(122, 122, 122);
  padding: 5px;
  width: auto;
}

#returnStore:hover {
  color: #383838;
}

#productImg {
  width: 65%;
  height: 110vh;
  border-radius: 10px;
  object-fit: cover;
}

#productDetails {
  width: 30%;
  height: 110vh;
  padding: 30px;
}

#productInfo {
  top: 0;
  left: 0;
  width: 100%;
  height: auto;
  background-color: rgb(247, 247, 247);
  z-index: 90;
  display: none;
  align-items: center;
  flex-direction: column;
  justify-content: flex-start;

}

#productContent {
  width: 80%;
  margin-top: 10vh;
  display: flex;
  align-items: center;
  flex-direction: row;
  margin-bottom: 10vh;
}

#menu h4 {
  margin: 5px !important;
  color: white;
  width: 80%;
  font-size: 50px;
  margin-left: 0px !important;
  text-align: left !important;
}

.review {
  padding: 15px;
  width: 40%;
  border-radius: 15px;
  border: 1px solid black;
  margin: 5px;
  height: 150px;
}

#x {
  display: none;
}

.menulink {
  height: 50px;
}

.max {
  display: none;
}

#mbar {
  display: flex;
  flex-direction: row;
  margin-left: auto;
  font-size: 30px;
  margin-right: max(2%, 15px);
  align-items: center;
}

#cartCount {
  position: absolute;
  height: 15px;
  padding: 0px 5px;
  right: 0;
  bottom: 0;
  display: none;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 30%;
  background-color: rgb(255, 226, 154);
}

#cartCount p {
  margin: 0;
  color: rgb(0, 0, 0);
  text-shadow: none;
  font-size: 10px;
  font-weight: 500;
}

#mbar i {
  margin-left: 15px;
  font-size: 25px;



}

#checkoutmain {
  margin-top: 5vh;
  display: flex;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  width: 60vw;
  padding: 5px;
  min-height: 100vh;
  max-width: 700px;
}
#completemain {
  margin-top: 5vh;
  display: none;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  width: 60vw;
  padding: 5px;
  min-height: 100vh;
  max-width: 700px;
}
.cartInfo {
  width:30%;
}
#admin {
  width:80vw;
  min-height:100vh;
  display:flex;
  flex-direction: column;
}
#btable td, #btable th, #btable tr{
  border: solid 1px black;

}
#btable {
  border: solid 1px black;
}
#btable tr td {
  font-size:15px;
}
#ptable td,
#ptable th,
#ptable tr {
  border: solid 1px black;

}

#ptable {
  border: solid 1px black;
}

#ptable tr td {
  font-size: 15px;
}
#contentadmin {
  width:90vw;
  height:auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#checkoutmain h3 {
  margin: 0;
  margin-left: 5px;
  margin-right: 5px;
  font-size: 15px;
}

#checkoutmain h1 {
  margin: 5px;
}
#completemain h1 {
  margin: 5px;
}

#checkoutmain input[type='text'] {
  margin-left: 5px;
  margin-right: 5px;
  max-width: 700px;
  font-size:17px;
  padding:3px 5px;
  border-radius:5px;
  outline: none;
  border: solid 1px rgb(123, 123, 123);
  transition-duration: 0.3s;
  margin-bottom:5px;

}
#checkoutmain input[type='text']:focus {
  border: solid 1px rgb(11, 11, 11);
}
#checkoutmain input[type='text']::placeholder {
  font-size:10px;
  color:rgb(75, 75, 75);
}
#cmain {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 10vh;
}

#empty {
  color: rgb(50, 50, 50);
  margin: 5px;
  font-size: 25px;
  font-weight: 400;
}

#cart {
  margin-top: 5vh;
  display: flex;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  width: 60vw;
  min-height: 100vh;
  padding: 5px;
  max-width: 700px;
}

#cartItems {
  width: 100%;
  display: flex;
  flex-direction: column;
}

#checkout {
  margin-right: 0;
  margin-left: auto;
  margin-top: 10px;
  margin-bottom: 0;

}

.price {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}

.price p {
  margin: 0;
}

.delete {
  height: 50px;
  width: 50px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  transition-duration: 0.3s;
}

.delete:hover {
  color: rgb(255, 93, 93);
}

.cartItem {
  width: 100%;
  height: auto;
  border-radius: 5px;
  margin-top: 5px;
  max-width: 700px;
  border: solid 1px black;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.itemInfo {
  display: flex;
  width: 50%;
  margin: 0;
  flex-direction: column;
}

.primaryCost {
  font-weight: 600;
}

.finalCost {
  font-weight: 800;
  font-size: 20px;
}

.costInfo {
  display: flex;
  margin: 0;
  width: auto;
  text-align: end;
  margin-right: 5px;
  margin-left: auto;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;

}

.costInfo p {
  margin: 0;
  margin-right: 0;
  margin-left: auto;
}

.itemInfo h3,
.itemInfo p {
  margin: 0;
}

.cartItem img {
  height: 10vh;
  margin: 5px;
  margin-right: 10px;
  width: 10vh;
  border-radius: 5px;
  object-fit: cover;
}

#cart h1 {
  margin: 5px;
}

.itemInfo h3 {
  text-transform: capitalize;
}

.mas {
  margin: 0;
  position: relative;
  padding: 0;
  display: flex;
  align-items: center;
  width: auto;
}
#addToCart:disabled {
  opacity:0.8;
}
@media only screen and (max-width: 900px) {

  .headl {
    display: none !important;
  }

  #mbar i {
    font-size: 20px;
  }

  .headr {
    width: 100vw !important;
  }

  .headr h4 {
    width: 80% !important;
  }

  .headr h1,
  .headr h4,
  #headbuttons {
    margin-left: 10px !important;
  }

  #candc {
    flex-direction: column !important;
  }

  #candc img {
    height: 50vh !important;
    width: 100% !important;
  }

  #candc div {
    padding: 0 !important;
  }

  #candc h4 {
    margin: 10px !important;
  }

  #candc h1 {
    font-size: 45px !important;
  }

  .mca {
    height: 50vh !important;
    width: 100% !important;

  }

  .itemInfo h3 {
    font-size: 16px;
  }

  .itemInfo p {
    font-size: 14px;
  }

  .primaryCost {
    font-size: 13px;
  }

  .secondaryCost {
    font-size: 13px;
  }

  .finalCost {
    font-size: 16px;
    ;
  }

  #cart {
    width: 90vw !important;
    max-width: 500px;
  }

  .pimg img {
    height: 75px !important;
    width: 80vw !important;
  }

  .mca2 {
    width: 100% !important;
    height: auto !important;
    padding: 0px !important;
    margin-top: 30px !important;
    margin-bottom: 50px !important;
  }

  #about h1 {
    font-size: 40px !important;
  }

  #about h4 {
    font-size: 20px !important;
  }

  .rhead {
    flex-direction: column-reverse !important;
  }

  .rhead p {
    margin-left: 3px !important;
  }

  .product {
    text-align: center;
  }

  .review p {
    font-size: 15px !important;
  }

  #dlvryinfo {
    height: auto !important;
    padding-top: 30px !important;
    padding-bottom: 30px !important;
    text-align: center;
  }

  #reviews {
    padding: 0 !important
  }

  #feat img {
    height: 50vh !important;
    width: 100% !important;
  }

  #feat {
    flex-direction: column-reverse !important;
    height: auto !important;
  }

  #contact div {
    padding: 0 !important;
  }

  #contact img {
    height: 30vh !important;
    width: 80% !important;
    min-width: 60% !important;
  }

  #contact .mca {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 10px !important;
    height: auto !important;
  }

  #contact {
    padding: 0 !important;
    flex-direction: column !important;
  }

  .navBar {
    position: sticky !important;
  }

  #productContent {
    flex-direction: column;
  }

  #productImg {
    width: 100% !important;
    height: 50vh;
  }

  #productDetails {
    width: 100% !important;

  }

}

